Chore: 잘못된 인코딩 수정
- 수정된 단원 Java 파일 인코딩 변경
  - EUC-KR -> UTF-8
- 코틀린 소스 원본 형태에 최대한 맞추어 변경